	  prevents seeing an outdated alias or not seeing an alias at all for
	  buddies who are offline when you sign in.
	* Update tokens for FindMembership and ABFindAll SOAP requests.
	* We no longer try to send empty messages.  This could happen when a
	  message contained only formatting and that formatting was not supported
	  on MSN.

	XMPP:
	* Resources using __HOSTNAME__ substitution will now grab only the short
	  hostname instead of the FQDN on systems which put the FQDN in the
	  hostname. (Matěj Cepl)
	* No longer send a 'to' attribute on an outgoing stanza when we haven't
	  received one.  This fixes a registration bug as described in ticket
	  #6635.

	Pidgin:
	* Tooltip windows now appear below the mouse cursor. (Kosta Arvanitis)
	* Tooltip windows now disappear on keypress events. (Kosta Arvanitis)
	* Tooltip windows no longer linger when scrolling the buddy list. (Kosta
	  Arvanitis)

	Finch:
	* Allow rebinding keys to change the focused widget (details in the
	  man-page, look for GntBox::binding)

version 2.5.4 (01/12/2009):
	libpurple:
	* Fix a connection timeout with empty Gadu-Gady buddy lists. (Martin
	  Rosinski)
	* Don't ignore namespace information when parsing XMPP data. (Michal
	  Witkowski)
	* Fix a crash that occurred when retrieving certain Offline Messages
	  on MSN.
	* Extended purple-url-handler to handle "gtalk" URI's. (Paul Aurich)
	* Fix the hang on exit in Network Location Awareness for Windows XP
	  and Windows Vista. (Paul Aurich)

	MSN:
	* Change Contact Server to temporarily fix connection problems.
	  (Thanks to Youness Alaoui)

	XMPP:
	* Support for XEP-0191 blocking.  (Vijay Raghunathan)
	* Don't put SASL PLAIN or IQ Auth passwords in debug logs. (Paul Aurich)
	* Fix removal of avatars (both PEP and vCard), we weren't removing
	  them correctly before. (Paul Aurich)

	Pidgin:
	* Fix a crash in the Add Account dialog when changing protocols under
	  certain circumstances.

	Finch: